# noctyrn-game

./: .gitignore  Cargo.toml  README.md  flake.nix  keybinds.json
.cargo/: config.toml
assets/: info.json  info.toml  server.json  server.toml
assets/weapons/attachments/: exampleAttachment.json
assets/weapons/data/equipment/: ExampleEquipment.json  cerevo_dominator_paralyzer.json  rgd-5.json
assets/weapons/data/melee/: 6x4_bayonet.json  ExampleMelee.json  axe.json  bmk-405_brown_argus.json  cjrb_chord.json  extrema_ratio_mamba_sw_desert.json  fa-03_bayonet.json  km2000.json  m968_bayonet.json  m9_bayonet.json  msbs_grot_bayonet.json  mx-8054.json  sks_bayonet.json
assets/weapons/data/primary/: aek-971.json  ak-12.json  ak-47.json  barrett_m82.json  bcm_mk_12_a5.json  colt_m4a1.json  colt_xm177_car-15.json  exampleGun.json  fn_p90.json  fn_scar_h_std.json  fn_scar_l_std.json  fort-500.json  franchi_spas_12.json  hk416.json  hk_mp5k.json  hk_mp7_a1.json  hk_ump_45.json  imi_uzi.json  m1_garand.json  m60_machine_gun.json  mosin_nagant_189130.json  pgm_hecate_ii.json  ppsh-41.json  remington_700.json  remington_870.json  rpd-44.json  rpk_7.62.json  (+7 more)
docs/: UI.md
scripts/: package.sh
settings/: game.toml  keybinds.toml  savestate.json  skin_inventory.json  ui.toml
src/: defaults.rs  gameplay.rs  main.rs  menu.rs  menu.rs.bak  player.rs  settings.rs  setup.rs  storage.rs  ui_config.rs  ui_settings.rs
src/gamemodes/: assassins.rs  capture_point.rs  capture_the_flag.rs  free_for_all.rs  hardpoint.rs  kill_confirmed.rs  king_of_the_hill.rs  ltm.rs  mod.rs  team_deathmatch.rs  testing_grounds.rs
src/menu/: chat.rs  cosmetics.rs  crate_menu.rs  friends.rs  gamemode.rs  invite.rs  loadout.rs  login.rs  main_menu.rs  mod.rs  party.rs  profile.rs
src/net/: http.rs  interpolation.rs  mod.rs  prediction.rs  tcp.rs  udp.rs
src/player/: camera.rs  input.rs  inventory.rs  mod.rs  movement.rs  shooting.rs
src/player/movement/: acceleration.rs  collision.rs  components.rs  config.rs  friction.rs  gravity.rs  ground_detection.rs  integration.rs  jump.rs  mod.rs  sliding.rs  state_transitions.rs
src/weapons/: mod.rs
src/world/: mod.rs  objects.rs
(+102 files in other folders)
