[package]
name = "fearlyss"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking"] } # dl before release
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
