[package]
name = "noctyrn"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19", features = ["serialize", "bevy_settings", "bevy_dev_tools", "system_clipboard"] }
noctyrn-shared = { path = "../noctyrn-shared" }
rand = "0.9.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "macros"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
dirs = "6.0"

[features]
# When developing locally we want dynamic linking (smaller edit-compile iteration for Bevy internals).
# Default includes `dev-dylib` so `cargo run` (dev) enables Bevy's `dynamic_linking` feature.
# Build release with `--no-default-features` to produce a single statically-linked binary.
default = ["dev-dylib"]
dev-dylib = ["bevy/dynamic_linking"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
